# VBEditor

./: .gitignore  Document.dotm  README.md  Workbook.xlam  pyproject.toml
src/com/: cli.py  ribbon.py
src/excel_com/: cli.py  ribbon.py
tests/com/: test_cli.py
tests/excel_com/: test_cli.py
